2024-01-12_border-radius_borders_favicon_opacity

--- a/2024-01-02_styles_text-formatting/uzduotys/wikipedia.html
+++ b/2024-01-02_styles_text-formatting/uzduotys/wikipedia.html
@@ -97,7 +97,7 @@
       href="https://en.wikipedia.org/wiki/Richard_Gere#cite_note-BiographyChannel-13"
       target="_blank"><sup>[13]</sup></a></p>
 
-  <h2>Career</h2>
+  <!-- <h2>Career</h2>
 
   <p>Gere with Lobsang Nyandak during The Tibet Fund annual gala in 2016
     Gere first worked professionally at the Seattle Repertory Theatre and the Provincetown Playhouse on Cape Cod in
@@ -160,7 +160,7 @@
     a Gentleman.[37]</p>
 
   <p>Multiple film critics and media outlets have cited Gere as one of the best actors never to have received an Academy
-    Award nomination.[38][39]</p>
+    Award nomination.[38][39]</p> -->
 </body>
 
 </html>
