--- a/2024-01-09_forms_input/uzduotys/contact-form.html
+++ b/2024-01-09_forms_input/uzduotys/contact-form.html
@@ -23,7 +23,7 @@
       min-height: 100vh;
       display: flex;
       justify-content: center;
-      /* align-items: center; */
+      align-items: center;
     }
 
     .container {
