navigation_section-hero

--- a/landing-page/landing-page.html
+++ b/landing-page/landing-page.html
@@ -14,8 +14,10 @@
 </head>
 
 <body>
-  <div class="container">
-    <header>
+
+
+  <header>
+    <div class="container">
       <img src="Frame 4.svg" class="logo" alt="logo">
       <nav>
         <ul>
@@ -24,16 +26,43 @@
           <li><a href="#">About Us</a></li>
           <li><a href="#">Article</a></li>
           <li><a href="#">Contact</a></li>
-          <li>
-            <button class="btn-log-in">Log in</button>
+          <li class="btns-login-register">
+            <a href="#" class="btn-log-in">Log in</a>
+            <!-- <button class="btn-log-in">Log in</button> -->
           </li>
-          <li>
-            <button class="btn-register">Register</button>
+          <li class="btns-login-register">
+            <a href="#" class="btn-register">Register</a>
+            <!-- <button class="btn-register">Register</button> -->
           </li>
         </ul>
       </nav>
-    </header>
+    </div>
+  </header>
 
+  <section class="hero-section">
+    <div class="container">
+      <div class="text-img-box">
+        <div class="text-box">
+          <div class="text">
+            <p>Let's <span>Begins</span></p>
+            <h1>Let's Find The Right <span>Course</span> For you</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non
+              convallis molestie.</p>
+          </div>
+          <div class="two-buttons">
+            <a href="#" class=" btn-register">Register</a>
+            <div class="btn-play-video">
+              <a href="#"><img src="Group 3.png" alt=""></a>
+              <p>Play Video</p>
+            </div>
+          </div>
+        </div>
+        <div class="img-box">
+          <img src="Group 6.svg" class="img-hero-section" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
   </div>
 
 
