what-get-section-1

--- a/landing-page/landing-page.html
+++ b/landing-page/landing-page.html
@@ -27,11 +27,11 @@
           <li><a href="#">Article</a></li>
           <li><a href="#">Contact</a></li>
           <li class="btns-login-register">
-            <a href="#" class="btn-log-in">Log in</a>
+            <a href="#" class="btn btn-log-in">Log in</a>
             <!-- <button class="btn-log-in">Log in</button> -->
           </li>
           <li class="btns-login-register">
-            <a href="#" class="btn-register">Register</a>
+            <a href="#" class="btn btn-register">Register</a>
             <!-- <button class="btn-register">Register</button> -->
           </li>
         </ul>
@@ -42,16 +42,16 @@
   <section class="hero-section">
     <div class="container">
       <div class="text-img-box">
-        <div class="text-box">
-          <div class="text">
-            <p>Let's <span>Begins</span></p>
+        <div class="-hero-text-box">
+          <div class="hero-text">
+            <p>Let's <span>begins</span></p>
             <h1>Let's Find The Right <span>Course</span> For you</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non
               convallis molestie.</p>
           </div>
           <div class="two-buttons">
-            <a href="#" class=" btn-register">Register</a>
-            <div class="btn-play-video">
+            <a href="#" class="btn btn-register">Register</a>
+            <div class=" btn-play-video">
               <a href="#"><img src="Group 3.png" alt=""></a>
               <p>Play Video</p>
             </div>
@@ -63,7 +63,58 @@
       </div>
     </div>
   </section>
-  </div>
+
+  <section class="what-get-section">
+    <div class="container">
+      <div class="what-get-box">
+
+        <div class="what-get-text-box">
+          <div class="what-get-text">
+            <p>what we give</p>
+            <h1>What do You Get From Us</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis molestie.</p>
+          </div>
+        </div>
+
+        <div class="what-get-carousel-box">
+          <div class="carousel-text-box">
+
+            <div class="carousel-card">
+              <div class="icon-carousel">
+                <img src="Group 1686.svg">
+              </div>
+              <h3>Professional Teacher</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis molestie.
+              </p>
+            </div>
+
+            <div class="carousel-card">
+              <div class="icon-carousel">
+                <img src="50.svg">
+              </div>
+              <h3>Course Certificate</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis molestie.
+              </p>
+            </div>
+
+            <div class="carousel-card">
+              <div class="icon-carousel">
+                <img src="Group.svg">
+              </div>
+              <h3>Interesting learning</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis molestie.
+              </p>
+            </div>
+          </div>
+
+          <div class="carousel-btn-box">
+            <button><img src="Group 1952.svg" alt=""></button>
+            <button><img src="Group 1951.svg" alt=""></button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
 </body>
