--- a/landing-page/landing-page.html
+++ b/landing-page/landing-page.html
@@ -52,13 +52,13 @@
           <div class="two-buttons">
             <a href="#" class="btn btn-register">Register</a>
             <div class=" btn-play-video">
-              <a href="#"><img src="Group 3.png" alt=""></a>
+              <a href="#"><img src="Group 3.png"></a>
               <p>Play Video</p>
             </div>
           </div>
         </div>
         <div class="img-box">
-          <img src="Group 6.svg" class="img-hero-section" alt="">
+          <img src="Group 6.svg" class="img-hero-section" alt="Image of women behind the computer">
         </div>
       </div>
     </div>
@@ -71,7 +71,7 @@
         <div class="what-get-text-box">
           <div class="what-get-text">
             <p>what we give</p>
-            <h1>What do You Get From Us</h1>
+            <h1>What do You <br>Get From Us</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis molestie.</p>
           </div>
         </div>
@@ -116,6 +116,41 @@
     </div>
   </section>
 
+  <section class="taking-courses-section">
+    <div class="container">
+      <div class="text-img-box text-img-box-taking-courses">
+
+        <div class="img-box">
+          <img src="Group 1964.svg" alt="Image of people taking courses">
+        </div>
+
+        <div class="taking-courses-text-box">
+          <div class="taking-courses-text">
+            <p>selected course</p>
+            <h1>people taking courses</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis molestie.</p>
+          </div>
+
+          <div class="taking-couses-statistics">
+            <div>
+              <p>6,000</p>
+              <p>people views</p>
+            </div>
+            <div>
+              <p>4,000</p>
+              <p>User</p>
+            </div>
+            <div>
+              <p>100</p>
+              <p>Couse</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+  </section>
 
 </body>
 
