--- a/landing-page/landing-page-aiskinimas-Viliaus/index.html
+++ b/landing-page/landing-page-aiskinimas-Viliaus/index.html
@@ -37,6 +37,33 @@
     </div>
   </header>
 
+  <main>
+    <section class="home">
+      <div class="container">
+        <div class="text">
+          <h4>Let's <strong>Begins</strong></h4>
+          <h1>Let's Find The Right <span>Course</span> For you</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis molestie.</p>
+        </div>
+        <div class="buttons">
+          <a href="#" class="button">Register</a>
+          <a href="#" class="button">
+            <i></i>
+            <span>Play Video</span></a>
+        </div>
+        <div class="image">
+          <img src="assets/images/1.svg" alt="">
+        </div>
+
+
+
+      </div>
+    </section>
+
+
+
+  </main>
+
 </body>
 
 </html>
