--- a/2024-01-22/grid_RegiM-landing-page/RegiM-landing-page.html
+++ b/2024-01-22/grid_RegiM-landing-page/RegiM-landing-page.html
@@ -16,7 +16,7 @@
     <header class="mt-4">
       <nav class="d-flex justify-content-between">
         <img src="Logo.svg">
-        <button class="btn btn-primary btn-lg"><a href="#" class="text-white text-decoration-none fw-semibold">Get Early
+        <button class="btn btn-primary btn-lg"><a href="#" class="text-white text-decoration-none">Get Early
             Access</a></button>
       </nav>
     </header>
@@ -24,7 +24,7 @@
 
   <div class="container">
     <section class="section-1 row align-items-center mt-5">
-      <!-- <div class="col-12 col-lg-6"> -->
+
       <div class="text-container-section-1 col-12 col-lg-6 pe-5"">
         <h1 class=" mb-3">Event Registration
         Reimagined</h1>
@@ -32,11 +32,11 @@
           team.
           Isn’t it
           sounds amazing?</p>
-        <button class="btn btn-primary btn-lg"><a href="#" class="text-white text-decoration-none fw-semibold">Get
+        <button class="btn btn-primary btn-lg"><a href="#" class="text-white text-decoration-none">Get
             Early
             Access</a></button>
       </div>
-      <!-- </div> -->
+
       <div class=" col-12 col-lg-6">
         <div class="img-container">
           <img src="mockups.svg">
@@ -45,11 +45,11 @@
     </section>
   </div>
 
-  <div class="container">
+  <!-- <div class="container">
     <section class="section-2 row">
       <div class="center text-center">
-        <!-- nesigauna dydis šššš... -->
-        <div class="row text-video-container">
+
+        <div class="row text-video-container col-12 col-md-6 col-lg-8">
           <h1>All-in-one Event Platform</h1>
           <p>Deliver an exceptional event experience</p>
           <img src="video-thumbnail.svg">
@@ -99,13 +99,13 @@
 
   <div class="container">
     <section class="section-3 row ">
-      <div class="text-container-section-3 col-12 col-lg-6">
+      <div class="text-container-section-3 d-flex flex-column justify-content-center col-12 col-lg-6">
         <h1>Integrate with your
           favorite tools</h1>
         <p>Connect RegiM with your most favorite sales and marketing tools</p>
       </div>
 
-      <div class="logos-container col-12 col-lg-6">
+      <div class="logos-container col-12 col-md-6">
         <div class="d-flex justify-content-center">
           <img src="Logo=slack.svg">
           <img src="Logo=quickbooks.svg">
@@ -122,23 +122,33 @@
   </div>
 
   <footer>
-    <div class="container container-footer d-flex flex-column col-12 col-lg-6 col-sm-4">
-      <h1>Create your event with RegiM</h1>
-      <p>Leveraging our virtual and live event experience, Hubilo offers everything you need to set up your next hybrid
-        event from registration to executing a flawless event.</p>
-      <button class="btn btn-primary btn-lg"><a href="#" class="text-white text-decoration-none fw-semibold">
-          Get Early Access</a></button>
-      <div>
-        <img src="Logomark.svg">
+    <div class="container d-flex flex-column align-items-center">
+
+
+      <div class="container-footer col-12 col-md-6 col-lg-8 text-center">
+        <h1>Create your event with RegiM</h1>
+        <p>Leveraging our virtual and live event experience, Hubilo offers everything you need to set up your next
+          hybrid
+          event from registration to executing a flawless event.</p>
+        <button class="btn btn-primary btn-lg col-12 col-md-6 col-lg-3"><a href="#"
+            class="text-white text-decoration-none fw-semibold">
+            Get Early Access</a></button>
+      </div>
+    </div>
+
+    <div class="footer-last container">
+      <div class="footer-line-logo">
+        <p class="line"></p>
+        <img src="LOGO.png">
       </div>
       <div class="footer-text d-flex justify-content-between">
-        <p>© RegiM 2022. Made with love by Landify</p>
-        <p>For further details, drop a mail to hello@landify.design</p>
+        <p>© RegiM 2022. Made with love by <span>Landify</span></p>
+        <p>For further details, drop a mail to <span>hello@landify.design</span></p>
       </div>
     </div>
   </footer>
   </div>
-
+ -->
 
 </body>
 
