--- a/2024-01-22/grid_RegiM-landing-page/RegiM-landing-page.html
+++ b/2024-01-22/grid_RegiM-landing-page/RegiM-landing-page.html
@@ -12,38 +12,42 @@
 </head>
 
 <body>
-  <div class="container">
-    <header class="mt-4">
+
+  <header>
+    <div class="container">
       <nav class="d-flex justify-content-between">
         <img src="Logo.svg">
-        <button class="btn btn-primary btn-lg"><a href="#" class="text-white text-decoration-none">Get Early
+        <button class="btn btn-primary"><a href="#" class="text-white text-decoration-none">Get Early
             Access</a></button>
       </nav>
-    </header>
-  </div>
+    </div>
+  </header>
 
-  <div class="container">
-    <section class="section-1 row align-items-center mt-5">
 
-      <div class="text-container-section-1 col-12 col-lg-6 pe-5"">
-        <h1 class=" mb-3">Event Registration
-        Reimagined</h1>
-        <p class="mb-5">Manage your event registrations hassle free and without any dependency with the technical
-          team.
-          Isn’t it
-          sounds amazing?</p>
-        <button class="btn btn-primary btn-lg"><a href="#" class="text-white text-decoration-none">Get
-            Early
-            Access</a></button>
-      </div>
+  <section class="section-1 mt-5">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="text-container-section-1 col-12 col-lg-6 pe-5"">
+          <h1 class=" mb-3">Event Registration
+          Reimagined</h1>
+          <p class="mb-5">Manage your event registrations hassle free and without any dependency with the technical
+            team.
+            Isn’t it
+            sounds amazing?</p>
+          <button class="btn btn-primary btn-lg"><a href="#" class="text-white text-decoration-none">Get
+              Early
+              Access</a></button>
+        </div>
 
-      <div class=" col-12 col-lg-6">
-        <div class="img-container">
-          <img src="mockups.svg">
+        <div class="text-center col-12 col-lg-6">
+          <div class="img-container">
+            <img src="mockups.svg">
+          </div>
         </div>
       </div>
-    </section>
-  </div>
+    </div>
+  </section>
+
 
   <!-- <div class="container">
     <section class="section-2 row">
