2024-01-24_RegiM- section 2 responsive

--- a/2024-01-22/grid_RegiM-landing-page/RegiM-landing-page.html
+++ b/2024-01-22/grid_RegiM-landing-page/RegiM-landing-page.html
@@ -49,59 +49,73 @@
   </section>
 
 
+  <section class="section-2">
+    <div class="container">
+      <div>
+
+        <div class="text-center">
+          <div class="text-video-container">
+            <h1>All-in-one Event Platform</h1>
+            <p>Deliver an exceptional event experience</p>
+            <img src="video-thumbnail.svg">
+          </div>
+        </div>
+
+        <div class="row icons-container">
+          <div class="icon-box p-4 col-12 col-md-6 col-lg-4 d-flex">
+            <img src="Feature Icon.svg" class="pb-4">
+            <div class="icon-text">
+              <h4>Event Metrics</h4>
+              <p>Track your ticket sales, attendees count and more with much ease.</p>
+            </div>
+          </div>
+
+          <div class="icon-box p-4 col-12 col-md-6 col-lg-4 d-flex">
+            <img src="Feature Icon1.svg" class="pb-4">
+            <div class="icon-text">
+              <h4>Registration & Ticketing</h4>
+              <p>Manage your Event registrations and ticket sales easier and receive payments instantly.</p>
+            </div>
+          </div>
+
+          <div class="icon-box p-4 col-12 col-md-6 col-lg-4 d-flex">
+            <img src="Feature Icon11.svg" class="pb-4">
+            <div class="icon-text">
+              <h4>Branded Badges</h4>
+              <p>Create your custom branded badges for your events and get them printed.</p>
+            </div>
+          </div>
+
+          <div class="icon-box p-4 col-12 col-md-6 col-lg-4 d-flex">
+            <img src="Feature Icon111.svg" class="pb-4">
+            <div class="icon-text">
+              <h4>Oragniser App</h4>
+              <p>Manage your events at the palm of your hand with our Oragniser App.</p>
+            </div>
+          </div>
+
+          <div class="icon-box p-4 col-12 col-md-6 col-lg-4 d-flex">
+            <img src="Feature Icon2.svg" class="pb-4">
+            <div class="icon-text">
+              <h4>Attendee Engagement</h4>
+              <p>Engage with your attendees via email, surveys and much more.</p>
+            </div>
+          </div>
+
+          <div class="icon-box p-4 col-12 col-md-6 col-lg-4 d-flex">
+            <img src="Feature Icon3.svg" class="pb-4">
+            <div class="icon-text">
+              <h4>Add to Calendar</h4>
+              <p>Effortless way to add your events to registered users calendars by 1-click.</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- <div class="container">
-    <section class="section-2 row">
-      <div class="center text-center">
-
-        <div class="row text-video-container col-12 col-md-6 col-lg-8">
-          <h1>All-in-one Event Platform</h1>
-          <p>Deliver an exceptional event experience</p>
-          <img src="video-thumbnail.svg">
-        </div>
-      </div>
-
-      <div class="row icons-container">
-        <div class="icon-box p-4 col-12 col-md-6 col-lg-4" style="text-align: center;">
-          <img src="Feature Icon.svg" class="pb-4">
-          <h4>Event Metrics</h4>
-          <p>Track your ticket sales, attendees count and more with much ease.</p>
-        </div>
-
-        <div class="icon-box p-4 col-12 col-md-6 col-lg-4" style="text-align: center;">
-          <img src="Feature Icon1.svg" class="pb-4">
-          <h4>Registration & Ticketing</h4>
-          <p>Manage your Event registrations and ticket sales easier and receive payments instantly.</p>
-        </div>
-
-        <div class="icon-box p-4 col-12 col-md-6 col-lg-4" style="text-align: center;">
-          <img src="Feature Icon11.svg" class="pb-4">
-          <h4>Branded Badges</h4>
-          <p>Create your custom branded badges for your events and get them printed.</p>
-        </div>
-
-        <div class="icon-box p-4 col-12 col-md-6 col-lg-4" style="text-align: center;">
-          <img src="Feature Icon111.svg" class="pb-4">
-          <h4>Oragniser App</h4>
-          <p>Manage your events at the palm of your hand with our Oragniser App.</p>
-        </div>
-
-        <div class="icon-box p-4 col-12 col-md-6 col-lg-4" style="text-align: center;">
-          <img src="Feature Icon2.svg" class="pb-4">
-          <h4>Attendee Engagement</h4>
-          <p>Engage with your attendees via email, surveys and much more.</p>
-        </div>
-
-        <div class="icon-box p-4 col-12 col-md-6 col-lg-4" style="text-align: center;">
-          <img src="Feature Icon3.svg" class="pb-4">
-          <h4>Add to Calendar</h4>
-          <p>Effortless way to add your events to registered users calendars by 1-click.</p>
-        </div>
-
-      </div>
-    </section>
-  </div>
-
-  <div class="container">
     <section class="section-3 row ">
       <div class="text-container-section-3 d-flex flex-column justify-content-center col-12 col-lg-6">
         <h1>Integrate with your
@@ -151,8 +165,8 @@
       </div>
     </div>
   </footer>
-  </div>
- -->
+  </div> -->
+
 
 </body>
 
