--- a/2024-02-02_masyvai/masyvai.html
+++ b/2024-02-02_masyvai/masyvai.html
@@ -34,7 +34,7 @@
     console.log(masyvas[0]);
     console.log(masyvas[2]);
 
-    // viso masyvo atvazidavimas
+    // viso masyvo atvaizdavimas
     console.log(masyvas);
 
     //norint patikrinti masyvo ilgi. skaiciuoja nuo 0
@@ -47,7 +47,7 @@
     masyvas[6] = 'Naujai prideta reiksme'
 
     //grazins ta skaiciu, kuris bus paskutineje pozicijoje
-    masyvas[masyvas.lenght] = 'Dar vienas elementas prideta  si pabaiga';
+    masyvas[masyvas.lenght] = 'Dar vienas elementas pridetas i pabaiga';
 
     console.log(masyvas); // nors pridejimas buvo veliau, atvaizdavimas bus su paskutine prideta reiksme
 
@@ -60,7 +60,7 @@
     // stringas = 'Stringas'; // negaliu priskirti naujos reiksmes const
     // bet
 
-    // Konstanta negali tureti naujo reiksme s priskyrimo, taciau masyve esancios esancios reiksmes keistis gali
+    // Konstanta negali tureti naujo reiksmes priskyrimo, taciau masyve esancios reiksmes keistis gali
     const naujasMasyvas = [10, 15, 25]; // masyvas yra kompleksinis duomens tipas
 
     //sitaip galime prideti reiksme masyvo viduje i PABAIGA
