--- a/2024-02-07_funkcijos2/arrow-funkcijos-mano.html
+++ b/2024-02-07_funkcijos2/arrow-funkcijos-mano.html
@@ -9,6 +9,13 @@
 
 <body>
   <script>
+    function rand(min, max) {
+      min = Math.ceil(min);
+      max = Math.floor(max);
+      return Math.floor(Math.random() * (max - min + 1) + min);
+    }
+
+
 
 
     // Jeigu atliekamas tik vienos eilutes veiksmas arrow funkcijoje riestiniai skliaustai
