--- a/2024-02-07_funkcijos2/arrow-funkcijos-mano.html
+++ b/2024-02-07_funkcijos2/arrow-funkcijos-mano.html
@@ -97,7 +97,7 @@
 
     //arba ta pati  performuojam i viena eilute
     // map() metodas skirtas sugeneruoti nauja masyva callback funkcijoje nurodant reiksme
-    const naujasMasyvas = masyvas.mapz(reiksme, indeksas => reiksme * indeksas);
+    const naujasMasyvas = masyvas.map(reiksme, indeksas => reiksme * indeksas);
 
 
     console.log(naujasMasyvas);
