--- a/2024-02-08/daugiamaciai-masyvai.html
+++ b/2024-02-08/daugiamaciai-masyvai.html
@@ -76,9 +76,9 @@
     // sugeneruokite masyva is 10 el., kurio elementai butu masayvai is 5 elementu su reiksmemis nuo 5 iki 25
     const newArray = [];
 
-    for (let pirmas = 0; pirmas < 10; y++) {
+    for (let pirmas = 0; pirmas < 10; pirmas++) {
       newArray[pirmas] = [];
-      for (let antras = 0; antras < 10; x++) {
+      for (let antras = 0; antras < 10; antras++) {
         newArray[pirmas][antras] = rand(5, 25);
       }
     }
