--- a/2024-02-08/daugiamaciai-masyvai.html
+++ b/2024-02-08/daugiamaciai-masyvai.html
@@ -19,7 +19,7 @@
     // const array = [10, 'Stringas', false, undefined, null, function() {}, []]
 
     // Statinemis pozicijomis kuraiamas daugiamatis masyvas
-    // aray[0] = 0;
+    // array[0] = 0;
     // array[0][0] = 10;
 
     // console.log(array);
