--- a/2024-02-07_funkcijos2/array-tasks-functions.html
+++ b/2024-02-07_funkcijos2/array-tasks-functions.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <script src="arrow-tasks-functions.js"></script>
+  <script src="array-tasks-functions.js"></script>
 
 </body>
 
