--- a/2024-02-05_functions/do-while.html
+++ b/2024-02-05_functions/do-while.html
@@ -20,12 +20,14 @@
       console.log(`Ciklas sukasi`);
     }
 
+
     // Do While kondicijos tikrinimas atliekamas iteracijos pabaigoje
-    // kondicija tikrinama ciklo pabaigoje. Atvirkstinis variantas 
+    // kondicija tikrinama ciklo pabaigoje. Atvirkstinis variantas. retesnis 
     do {
       // Atliekami veiksmai
-      console.log(`Ciklasukasi`);
+      console.log(`Ciklas Sukasi`);
     } while (false);
+    // Veiksmus atliks ir tik tada patikrins (while)
 
 
   </script>
